# humetric-embed

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/humetric_embed/: __init__.py  checkpoints.py  encoder.py  errors.py
tests/: test_checkpoints.py  test_encoder.py
